--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -12,44 +12,67 @@
     
     <main class="row">
 
-        <section class="col-md-6 row">
-            <div class="col-md-1"></div>
-            <div id="add-restaurant" class="border border-danger text-center col-md-10">
-                <h5>Add Restaurant</h5>
-                <!--Add Restaurant Form-->
-                <form>
-                    <!--Restaurant Name-->
-                    <div class="form-group row">
-                        <label for="restaurant-name" class="col-sm-2 col-form-label">Name</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="restaurant-name" placeholder="Grapes Wine & Fruit">
+        <section class="col-md-6">
+            <!--Add Restaurant Form-->
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div id="add-restaurant" class="border border-danger text-center col-md-10">
+                    <h5>Add Restaurant</h5>
+
+                    <form>
+                        <!--Restaurant Name-->
+                        <div class="form-group row">
+                            <label for="restaurant-name" class="col-sm-2 col-form-label">Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="restaurant-name" placeholder="Grapes Wine & Fruit">
+                            </div>
                         </div>
-                    </div>
-                    <!--Restaurant Address-->
-                    <div class="form-group row">
-                        <label for="restaurant-address" class="col-sm-2 col-form-label">Address</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="restaurant-address" placeholder="3307 Grapevine Lane, Grapetown, North Carolina">
+                        <!--Restaurant Address-->
+                        <div class="form-group row">
+                            <label for="restaurant-address" class="col-sm-2 col-form-label">Address</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="restaurant-address" placeholder="3307 Grapevine Lane, Grapetown, North Carolina">
+                            </div>
                         </div>
-                    </div>
-                    <!--Restaurant Img-->
-                    <div class="form-group row">
-                        <label for="restaurant-img" class="col-sm-2 col-form-label">Image</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" id="restaurant-img">
+                        <!--Restaurant Img-->
+                        <div class="form-group row">
+                            <label for="restaurant-img" class="col-sm-2 col-form-label">Image</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="restaurant-img">
+                            </div>
                         </div>
-                    </div>
-                    <!--Restaurant Description-->
-                    <div class="form-group row">
-                        <label for="restaurant-description" class="col-sm-2 col-form-label">Description</label>
-                        <div class="col-sm-10">
-                            <textarea type="text" class="form-control" id="restaurant-description"></textarea>
+                        <!--Restaurant Description-->
+                        <div class="form-group row">
+                            <label for="restaurant-description" class="col-sm-2 col-form-label">Description</label>
+                            <div class="col-sm-10">
+                                <textarea type="text" class="form-control" id="restaurant-description"></textarea>
+                            </div>
                         </div>
-                    </div>
-                    <button id="submit-restaurant" type="button" class="btn btn-outline-secondary mb-2">Submit</button>
-                </form>
+                        <!--# of Tables at Restaurant-->
+                        <div class="form-group row">
+                            <label for="restaurant-tables" class="col-sm-2 col-form-label"># of Tables</label>
+                            <div class="col-sm-10">
+                                <input type="number" class="form-control" id="restaurant-tables" placeholder="12">
+                            </div>
+                        </div>
+                        <button id="submit-restaurant" type="button" class="btn btn-outline-secondary mb-2">Submit</button>
+                    </form>
+                </div>
+                <div class="col-md-1"></div>
             </div>
-            <div class="col-md-1"></div>
+            <!--Update Tables Form-->
+            <div id="table-find" class="row mt-4">
+                <div class="col-md-1"></div>
+                <div class="border border-success text-center col-md-10">
+                    <!--After a user chooses a restaurant, the user chooses a table and then can change that record-->
+                    <h5 id="table-update">Choose Restaurant</h5>
+                    <div id="update-table-div">
+
+                    </div>
+                </div>
+                <div class="col-md-1"></div>
+
+            </div>
         </section>
         <section class="col-md-6 row">
             <div class="col-md-1"></div>
