--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -90,9 +90,41 @@
 
             <div class="row" class="border border-danger">
                 <div class="col-md-1"></div>
-                <div class="border border-secondary text-center col-md-10">
-                    <h5> Add Menu Items</h5>
-                    
+                <div id ="menu-add-section" class="border border-secondary text-center col-md-10" style="overflow-y: auto; height: 300px">
+                    <h5>Add Menu Items</h5>
+                    <div id="r-display"></div>
+                    <form id="add-to-menu" style="display: none">
+                            <!--Dish Name-->
+                            <div class="form-group row">
+                                <label for="dish-name" class="col-sm-2 col-form-label">Name</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="dish-name" placeholder="Grape Juice">
+                                </div>
+                            </div>
+                            <!--Dish Category-->
+                            <div class="form-group row">
+                                <label for="dish-category" class="col-sm-2 col-form-label">Category</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="dish-category" placeholder="Drinks">
+                                </div>
+                            </div>
+                            <!--Dish Description-->
+                            <div class="form-group row">
+                                <label for="dish-description" class="col-sm-2 col-form-label">Description</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="dish-description">
+                                </div>
+                            </div>
+                            <!--Dish Price-->
+                            <div class="form-group row">
+                                <label for="dish-price" class="col-sm-2 col-form-label">Price</label>
+                                <div class="col-sm-10">
+                                    <input type="number" class="form-control" id="dish-price">
+                                </div>
+                            </div>
+                            
+                            <button id="submit-dish" type="button" class="btn btn-outline-secondary mb-2">Submit</button>
+                        </form>
                 </div>
                 <div class="col-md-1"></div>
             </div>
