Add Restaurant Form works, now need to implement table update form

--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -19,7 +19,7 @@
                 <div id="add-restaurant" class="border border-danger text-center col-md-10">
                     <h5>Add Restaurant</h5>
 
-                    <form>
+                    <form id="restaurant-added">
                         <!--Restaurant Name-->
                         <div class="form-group row">
                             <label for="restaurant-name" class="col-sm-2 col-form-label">Name</label>
