--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -66,8 +66,7 @@
                 <div class="border border-success text-center col-md-10">
                     <!--After a user chooses a restaurant, the user chooses a table and then can change that record-->
                     <h5 id="table-update">Edit Tables</h5>
-                    <div id="update-table-div">
-
+                    <div id="update-table-div" style="overflow-y: auto; height: 300px">
                     </div>
                 </div>
                 <div class="col-md-1"></div>
