--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -65,8 +65,18 @@
                 <div class="col-md-1"></div>
                 <div class="border border-success text-center col-md-10">
                     <!--After a user chooses a restaurant, the user chooses a table and then can change that record-->
-                    <h5 id="table-update">Edit Tables</h5>
+                    <h5 id="table-update-header">Edit Tables</h5>
                     <div id="update-table-div" style="overflow-y: auto; height: 300px">
+                            <form id="update-table-form" style="display: none">
+                                <div class="form-group row">
+                                    <label for="table-section" class="col-sm-2 col-form-label">Section</label>
+                                    <div class="col-sm-10">
+                                        <input type="text" class="form-control" id="table-section" placeholder="Section 1">
+                                    </div>
+                                </div>
+        
+                                <button id="submit-table" type="button" class="btn btn-outline-secondary mb-2">Submit</button>
+                            </form>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
