--- a/public/my-restaurant.html
+++ b/public/my-restaurant.html
@@ -65,7 +65,7 @@
                 <div class="col-md-1"></div>
                 <div class="border border-success text-center col-md-10">
                     <!--After a user chooses a restaurant, the user chooses a table and then can change that record-->
-                    <h5 id="table-update-header">Edit Tables</h5>
+                    <h5 id="table-update-header">Add Table Section</h5>
                     <div id="update-table-div" style="overflow-y: auto; height: 300px">
                             <form id="update-table-form" style="display: none">
                                 <div class="form-group row">
