--- a/public/customers.html
+++ b/public/customers.html
@@ -36,7 +36,7 @@
         <section class="col-md-1"></section>
         
         <section class="col-md-10 border border-info mt-4" style="height: 400px;">
-            <h5 id="menu-btn-here" class="text-center">Available Tables</h5>
+            <h5 id="menu-btn-here" class="text-center">Available Tables <button id="order-btn" class="mx-5 my-3 btn btn-sm btn-info" data-toggle="modal" data-target="#to-order-modal" style="display: none;">Order</button></h5>
             <!--All Content for the SVG goes here-->
             <div>
 
@@ -57,12 +57,11 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
-              ...
+            <div id="body-modal" class="modal-body">
+            
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
