--- a/public/customers.html
+++ b/public/customers.html
@@ -70,7 +70,7 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div id="body-modal" class="modal-body">
+            <div id="body-modal-div" class="modal-body">
             
             </div>
             <div class="modal-footer">
