--- a/public/customers.html
+++ b/public/customers.html
@@ -8,11 +8,15 @@
    <title>GRAMS - Restaurant</title>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous">
+    <!--Custom Stylesheet-->
    <link rel="stylesheet" href="/stylesheets/svgcustomers.css">
+   <link   
+        rel="stylesheet"
+        href="./stylesheets/customers.css">
 </head>
 
 <body>
-   <main class="row">
+   <main class="row mike-body">
 
       <section class="col-md-1"></section>
       <!--All Content goes within this section-->
@@ -35,7 +39,7 @@
    </main>
 
    <!--Tables-->
-   <main class="row mb-4">
+   <main class="row mb-4 mike-body">
 
       <section class="col-md-1"></section>
 
@@ -58,6 +62,10 @@
       <section class="col-md-1"></section>
 
    </main>
+
+   <footer>
+       
+   </footer>
 
 
 
