Remove borders + styled Customers

--- a/public/customers.html
+++ b/public/customers.html
@@ -8,6 +8,10 @@
    <title>GRAMS - Restaurant</title>
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous">
+    <!--Google Fonts-->
+    <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Exo+2|Oswald|Shadows+Into+Light|Noto+Serif+KR">
     <!--Custom Stylesheet-->
    <link rel="stylesheet" href="/stylesheets/svgcustomers.css">
    <link   
@@ -20,11 +24,11 @@
 
       <section class="col-md-1"></section>
       <!--All Content goes within this section-->
-      <section class="col-md-10 border border-danger">
+      <section class="col-md-10 divLast">
          <!--Display All Restaurants-->
          <div id="restaurants-div" class="row">
             <div class="col-md-1"></div>
-            <div class="col-md-10 mt-2 border border-success" style="overflow-x: auto;">
+            <div class="col-md-10 mt-2" style="overflow-x: auto;">
                <div id="all-restaurants" class="card-deck">
 
                </div>
